--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,8 +10,8 @@
 	<form action="#" th:action="@{/login}" method="post">
 	    <input type="text" name="username" minlength="1" maxlength="30" placeholder="ユーザー名" required /><br>
 	    <input type="password" name="password" minlength="1" maxlength="20" placeholder="パスワード" required /><br>
-	    <p th:if="${error}" th:text="${error}" class="error"></p>
-		<p th:if="${msg}" th:text="${msg}" class="message"></p>
+	    <p class="error" th:text="${error} ?: ''"></p>  <!--高さ確保 -->
+		<p class="message" th:text="${msg} ?: ''"></p>
 		<button type="submit">ログイン</button>
 	</form>
 	
