--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -48,9 +48,9 @@
             <div class="task-counts">
                 <!--未完了タスク件数-->
                 <h2>今日以前の未完了タスク件数</h2>
-                    <p><span th:text="${todayIncompleteTasks} + '件'">0件</span></p>
+                    <p><span id="todayIncompleteTasks" th:text="${todayIncompleteTasks} + '件'">0件</span></p>
                 <h2>全未完了タスク件数</h2>
-                    <p><span th:text="${allIncompleteTasks} + '件'">0件</span></p>
+                    <p><span id="allIncompleteTasks" th:text="${allIncompleteTasks} + '件'">0件</span></p>
             </div>
         </div>
         <div class="tasklist">
