--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -63,19 +63,21 @@
 
                 <div class="tasklist">
                     <h2 class="table-title">現在のタスク一覧</h2>
-                    <!-- 固定したい見出し -->
-                    <div class="table-wrapper">
+                    <div class="selectbutton">
                         <button id="selectList">一括選択モード</button>
                         <button id="completeSelectedButton">完了</button>
                         <button id="deleteTasks">削除</button>
-                        <table border="1" class="task-table">
+                    </div>
+                    <!-- 固定したい見出し -->
+                    <div class="table-wrapper">
+                        <table border="1" class="task-table" id="taskTable">
                             <thead>
-                                <tr>
-                                    <th>
-                                        <button id="checkAllButton">全選択</button>
-                                    </th>
-                                    <th class="hidden">ID</th>
-                                   <th>タスク</th>
+                            <tr>
+                            <th>
+                                <button id="checkAllButton">全選択</button>
+                            </th>
+                            <th class="hidden">ID</th>
+                            <th>タスク</th>
                             <th>期限 <button id="filterDateBtn" class="col-btn">▼</button></th>
                             <th>時間</th>
                             <th>優先度 <button id="filterPriorityBtn" class="col-btn">▼</button></th>
