--- a/src/main/resources/static/register.css
+++ b/src/main/resources/static/register.css
@@ -13,29 +13,39 @@ body {
 }
 
 h1 {
-    margin-bottom: 24px;
     color: #1A237E;
     font-size: 1.8rem;
     text-align: center;
 }
 
 form {
-    background-color: #FFFFFF;
-    padding: 24px 32px;
-    border: 1px solid #283593;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(40, 53, 147, 0.2);
-    display: flex;
-    flex-direction: column;
-    max-width: 360px;
-    box-sizing: border-box;
+  background-color: #FFFFFF;
+  padding: 0px 32px;
+  border: 1px solid #283593;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(40, 53, 147, 0.2);
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 400px;
+  box-sizing: border-box;
+}
+
+form p {
+  display: flex;
+  flex-direction: column;
+}
+
+form p input {
+  width: 100%;
+  margin-top: 6px; /* ラベルとinputの間に少しスペース */
+  box-sizing: border-box;
 }
 
 input[type="text"],
 input[type="password"],
 input[type="email"] {
     padding: 10px 12px;
-    margin-bottom: 16px;
     border: 1px solid #64B5F6;
     border-radius: 4px;
     font-size: 1rem;
@@ -48,6 +58,7 @@ input::placeholder {
 }
 
 button {
+    margin-top: 9px;
     padding: 10px 16px;
     background-color: #D81B60;
     color: white;
@@ -63,12 +74,17 @@ button:hover {
 }
 
 p.error {
-    min-height: 22px;
-    margin: -5px 0 9px;
+    min-height: 44px;/* 2行分の高さを確保（line-height × 2） */
+    margin: 0;
     line-height: 1.4;
     color: red;
     font-weight: bold;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: normal;
+    word-break: break-word;
 }
 
 .nav-links {
