--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,8 +8,10 @@
 <body>
 	<h1>タスク管理</h1>
 	<form action="#" th:action="@{/login}" method="post">
+		<span class="input-label">ユーザー名</span>
 	    <input type="text" name="username" minlength="1" maxlength="30" placeholder="ユーザー名" required /><br>
-	    <input type="password" name="password" minlength="1" maxlength="20" placeholder="パスワード" required /><br>
+	    <span class="input-label">パスワード</span>
+		<input type="password" name="password" minlength="1" maxlength="20" placeholder="パスワード" required /><br>
 	    <p class="error" th:text="${error} ?: ''"></p>  <!--高さ確保 -->
 		<p class="message" th:text="${msg} ?: ''"></p>
 		<button type="submit">ログイン</button>
