--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -98,14 +98,14 @@
                                 <span class="checkmark"></span>
                             </label>
                         </td>
-                            <td class="hidden" th:text="${task.id}"></td><!--↓詳細pop表示-->
-                            <td th:text="${task.title}" onclick="openDetailDialogFromTitle(this)" style="cursor: pointer;"></td>
-                            <td class="hidden" th:text="${task.detail}"></td><!--隠し詳細欄-->
-                            <td width="100px" th:text="${task.deadline}"></td>
-                            <td width="100px" th:text="${task.time}"></td>
-                            <td width="50px" th:text="${task.priority}"></td>
-                            <td width="50px" th:text="${task.done} ? '完了': '未完了'"></td>
-                            <td width="50px">
+                            <td class="hidden" th:text="${task.id}"></td>
+                            <td class="task-name" th:text="${task.title}" onclick="openDetailDialogFromTitle(this)" style="cursor: pointer;"></td>
+                            <td class="hidden" th:text="${task.detail}"></td>
+                            <td class="task-deadline" th:text="${task.deadline}"></td>
+                            <td class="task-time" th:text="${task.time}"></td>
+                            <td class="task-priority" th:text="${task.priority}"></td>
+                            <td class="task-done" th:text="${task.done} ? '完了' : '未完了'"></td>
+                            <td class="task-edit">
                             <button
                                 type="button"
                                 class="update-button"
@@ -119,7 +119,7 @@
                                 onclick="openUpdateDialog(this)"
                             >編集</button> 
                             </td>
-                            <td width="50px">
+                            <td class="task-delete">
                                 <form action="#" th:action="@{/list/delete}" method="post">
                                     <button type="submit" id="delete_button">削除</button>
                                     <input type="hidden" name="id" th:value="${task.id}" />
