期限未入力の回避修正

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -150,8 +150,8 @@
                         <textarea id="add_detail" name="detail" minlength="1" maxlength="400" placeholder="1~400文字まで入力可能" rows="4"></textarea>
                         <label>期限</label>
                         <div class="deadline-inputs">
-                        <input id="add_deadline" name="deadline" type="date" />
-                        <input id="add_time" name="time" type="time" value="09:00"/>
+                        <input id="add_deadline" name="deadline" type="date" required/>
+                        <input id="add_time" name="time" type="time" value="09:00" required/>
                         </div>
                         <div class="priority-status">
                             <div class="field">
